# TFG_Localizacion_Android

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/localizacionInalambrica/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/localizacion_inalambrica/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Chacha20-256-csprng.c  Chacha20-256-csprng.h  Chaskey16_29bytes.c  Chaskey16_29bytes.h  hola.c  hola.h  hola_jni.c  main.c  main.h  main_jni.c  native-lib.c  native-lib.cpp
app/src/main/cpp/include/: hola_jni.h  main_jni.h
app/src/main/java/com/example/localizacionInalambrica/: APP.kt  Bluetoothbeaconlibexables.kt  MainActivity.kt  MainActivity2.kt  PermissionSafer.kt  StartActivity.kt  aaa.kt  extensiones.kt  serviceGPS.kt  ubicacion.kt
app/src/main/java/com/example/localizacion_inalambrica/: APP.kt  Bluetoothbeaconlibexables.kt  MainActivity.kt  MainActivity2.kt  PermissionSafer.kt  StartActivity.kt  a.kt  extensiones.kt  (+1 more)
app/src/main/res/drawable/: ic_baseline_how_to_reg_24.xml  ic_my_location_24.xml
app/src/main/res/layout/: activity_bluetooth.xml  activity_start.xml  app_bar_main.xml  fragment_gallery.xml  fragment_home.xml  fragment_login.xml  fragment_registro.xml  fragment_server.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph_start.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+37 files in other folders)
